jewish-newton/chai-gala.css
/* ... */
td.chabad_logo a,
td.chabad_logo h1,
td.chabad_logo div {
  font-size: 40px;
}

.chabad_logo h1 a img {
  max-height: 100px;
}

td.chabad_text_head {
  box-sizing: border-box;
  float: none;
  vertical-align: middle;
}

td.chabad_text_head img {
  float: right;
}

#chabad_head .chabad_navigator_bar {
  background-size: 100%;
  background: #d0af41;
}

.mobile #chabad_head .chabad_navigator_bar {
  width: 100%;
  height: auto;
}

#chabad_main_content .chabad_navigator_bar .chabad_menu_content {
  height: 100%;
}

#chabad_head .chabad_navigator_bar ul#menu {
  margin: 0;
  padding: 10px;
  position: relative;
  z-index: 2;
  text-align: center;
}

#chabad_head .chabad_navigator_bar ul li {
  font-size: 13px;
  list-style: none;
  z-index: 2;
  display: inline-block;
  color: #d0af41;
}

#chabad_head .chabad_navigator_bar ul li .sub_menu {
  display: none;
  position: absolute;
  top: 36px;
}

#chabad_head .chabad_navigator_bar ul li:last-child {
  border-right: none;
}

.chabad_navigator_bar ul li a {
  font-weight: bold;
  height: 100%;
  padding: 0 16px;
  text-decoration: none;
  color: #e8d7a0;
  text-transform: uppercase;
  font-size: 22px;
}

.chabad_navigator_bar ul li a.selected,
.chabad_navigator_bar ul li a:hover {
  color: white;
}

.chabad_navigator_bar ul li a.arrow {
  background: url("") no-repeat right center;
  padding-right: 26px;
}

#chabad_head .chabad_navigator_bar ul li a.first {
  padding-left: 0;
}


#chabad_head .chabad_navigator_bar ul li ul {
  padding: 0;
}

#chabad_head .chabad_navigator_bar ul li ul li {
  border-bottom: 1px solid #ffffff;
  border-right: none;
  float: none;
  font-size: 12px;
  height: auto;
  line-height: 17px;
  min-height: 23px;
  padding: 3px 0;
}

#chabad_head .chabad_navigator_bar ul li.active .sub_menu {
  display: block;
}

#chabad_head .chabad_navigator_bar ul li ul li:last-child {
  border: none;
}

#chabad_head .chabad_navigator_bar ul li ul li a {
  display: inline-block;
  float: none;
  font-size: 12px;
  height: auto;
  max-width: 220px;
  min-width: 80px;
  padding: 2px 15px 0 15px;
}

#chabad_head .chabad_navigator_bar ul li ul li a:hover {
  background: none;
}

#chabad_main_content {
  margin-left: auto;
  margin-right: auto;
  overflow: hidden;
  text-align: left;
}

div.chabad_left_column {
  float: left;
  margin: 15px;
  margin-bottom: 0;
  width: 685px;
}

div.content_full_width .chabad_left_column {
  float: none;
  width: auto;
}

div.chabad_right_column {
  float: left;
  margin-top: 15px;
  width: 245px;
}
#chabad_right_colum > div {
  margin: 0 0 10px;
  overflow: visible;
  padding: 1px;
}

#content_page_full {
  padding-bottom: 15px;
  width: 975px;
  margin: 50px auto 0;
}

#navigation,
.chabad_menu_content,
#chabad_head .chabad_content_head,
.chabad_banner_content,
.chabad_banner_content .chabad_image_content,
.chabad_image_banner,
.chabad_box_content_first,
.chabad_box_content_second,
.chabad_box_content_third,
.chabad_title_box.no_line,
.chabad_box_content_body,
.chabad_box_gradient,
.chabad_announce,
.chabad_text_box,
.chabad_text_box,
.content_box_custom {
  float: none;
  width: initial;
}

.chabad_banner_content .chabad_text_banner {
  float: left;
  padding: 0 0 20px;
  width: 100%;
}

#content_banner:after {
  clear: both;
  content: " ";
  display: table;
}

.chabad_banner_content .chabad_image_banner {
  max-height: 342px;
  overflow: hidden;
}

#chabad_head .flowers,
#co_calendar
  .co_calendar_body
  .co_calendar_gradient
  .co_calendar_text
  div.item
  .image {
  float: left;
}

.chabad_announce {
  margin: 10px;
  overflow: hidden;
}
.chabad_box_content_first,
.chabad_box_content_second,
.chabad_box_content_third {
  overflow-x: initial !important;
}

.chabad_banner_content .chabad_text_banner a.chabad_more_button {
  float: right;
}

.chabad_image_banner img {
  height: auto;
  width: 100%;
}

.chabad_text_box div {
  font-size: 14px;
}
.co_section_head,
.co_photo_gallery_head,
.chabad_updates_head,
.co_calendar_head {
  color: #fff;

  font-size: 20px;
  margin: 0 -1px;
}

.chabad_logo p {
  margin: 0;
}

.mobile_menu_nav_button {
  position: relative;
  width: 100%;
  text-align: center;
  padding: 10px 0;
  font-weight: bold;
  font-size: 14px;
  color: inherit;
}
.mobile_menu_nav_button:after {
  content: "\25bc";
  left: 10px;
  position: relative;
  color: inherit;
}
.mobile_menu.open .mobile_menu_nav_button:after {
  content: "\25b2";
}
body.mobile #menu li.item.parent:not(:first-child) {
  display: none;
}
body.mobile #chabad_head .chabad_navigator_bar {
  width: auto;
  height: auto;
  margin-top: 0;
  float: none;
}
body.mobile #chabad_head .chabad_navigator_bar ul {
  float: none;
  display: block;
}

body.mobile #chabad_head .chabad_navigator_bar ul li {
  float: none;
  display: block;
  height: auto;
}
body.mobile #chabad_head .chabad_navigator_bar ul li a {
  float: none;
}
.mobile_menu_nav_button {
  position: relative;
  width: 100%;
  text-align: center;
  padding: 10px 0;
  font-weight: bold;
  font-size: 14px;
  color: inherit;
}
.mobile_menu_nav_button:after {
  content: "\25bc";
  left: 10px;
  position: relative;
  color: inherit;
}
.mobile_menu.open .mobile_menu_nav_button:after {
  content: "\25b2";
}
body.mobile .chabad_navigator_bar .chabad_menu_content {
  width: 100% !important;
  position: relative;
  z-index: 2;
}
body.mobile .chabad_navigator_bar .chabad_menu_content ul {
  margin: 0;
  padding: 0 15px;
}
body.mobile .chabad_navigator_bar .chabad_menu_content li {
  display: inline-block;
  position: relative;
  z-index: 2;
  float: none;
  list-style: none;
}
body.mobile #navigation.chabad_navigator_bar #menu li:not(.heading) {
  padding-left: 10px;
}
body.mobile .chabad_navigator_bar .chabad_menu_content li.last {
  border-right: none;
}
body.mobile .chabad_navigator_bar .chabad_menu_content li.custom_separator {
  display: none;
}
/* ... */

